syntax = "proto3";

package deka.bridge.v1;

message NullValue {}

message Value {
  oneof kind {
    NullValue null_value = 1;
    bool bool_value = 2;
    int64 int_value = 3;
    double float_value = 4;
    string string_value = 5;
    bytes bytes_value = 6;
  }
}

message NamedValue {
  string key = 1;
  Value value = 2;
}

message Row {
  repeated NamedValue fields = 1;
}

message DbOpenRequest {
  string driver = 1;
  repeated NamedValue config = 2;
}

message DbQueryRequest {
  uint64 handle = 1;
  string sql = 2;
  repeated Value params = 3;
}

message DbExecRequest {
  uint64 handle = 1;
  string sql = 2;
  repeated Value params = 3;
}

message DbHandleRequest {
  uint64 handle = 1;
}

message DbRequest {
  uint32 schema_version = 1;
  oneof action {
    DbOpenRequest open = 10;
    DbQueryRequest query = 11;
    DbQueryRequest query_one = 12;
    DbExecRequest exec = 13;
    DbHandleRequest begin = 14;
    DbHandleRequest commit = 15;
    DbHandleRequest rollback = 16;
    DbHandleRequest close = 17;
    bool stats = 18;
  }
}

message DbOpenResponse {
  uint64 handle = 1;
  bool reused = 2;
}

message DbRowsResponse {
  repeated Row rows = 1;
}

message DbExecResponse {
  uint64 affected_rows = 1;
}

message DbStatsMetric {
  uint64 calls = 1;
  uint64 errors = 2;
  uint64 total_ms = 3;
  uint64 avg_ms = 4;
}

message DriverCount {
  string driver = 1;
  uint64 count = 2;
}

message DbStatsResponse {
  uint64 active_handles = 1;
  repeated DriverCount handles_by_driver = 2;
  repeated NamedMetric metrics = 3;
}

message NamedMetric {
  string key = 1;
  DbStatsMetric metric = 2;
}

message DbUnitResponse {
  bool ok = 1;
}

message DbResponse {
  uint32 schema_version = 1;
  bool ok = 2;
  string error = 3;
  oneof action {
    DbOpenResponse open = 10;
    DbRowsResponse query = 11;
    DbRowsResponse query_one = 12;
    DbExecResponse exec = 13;
    DbUnitResponse begin = 14;
    DbUnitResponse commit = 15;
    DbUnitResponse rollback = 16;
    DbUnitResponse close = 17;
    DbStatsResponse stats = 18;
  }
}
