syntax = "proto3";

package deka.bridge.v1;

message FsOpenRequest {
  string path = 1;
  string mode = 2;
}

message FsReadRequest {
  uint64 handle = 1;
  uint64 max_bytes = 2;
}

message FsWriteRequest {
  uint64 handle = 1;
  bytes data = 2;
}

message FsCloseRequest {
  uint64 handle = 1;
}

message FsReadFileRequest {
  string path = 1;
}

message FsWriteFileRequest {
  string path = 1;
  bytes data = 2;
}

message FsRequest {
  uint32 schema_version = 1;
  oneof action {
    FsOpenRequest open = 10;
    FsReadRequest read = 11;
    FsWriteRequest write = 12;
    FsCloseRequest close = 13;
    FsReadFileRequest read_file = 14;
    FsWriteFileRequest write_file = 15;
  }
}

message FsOpenResponse {
  uint64 handle = 1;
}

message FsReadResponse {
  bytes data = 1;
  bool eof = 2;
}

message FsWriteResponse {
  uint64 written = 1;
}

message FsUnitResponse {
  bool ok = 1;
}

message FsResponse {
  uint32 schema_version = 1;
  bool ok = 2;
  string error = 3;
  oneof action {
    FsOpenResponse open = 10;
    FsReadResponse read = 11;
    FsWriteResponse write = 12;
    FsUnitResponse close = 13;
    FsReadResponse read_file = 14;
    FsWriteResponse write_file = 15;
  }
}
